reverse,forward: plug memleaks when _geocode_glib_cache_path_for_query() is used

E.g. for the reverse geocoding operation:

    ==3365== 128 bytes in 1 blocks are definitely lost in loss record 2,226 of 2,357
    ==3365==    at 0x4C2AB5D: realloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so)
    ==3365==    by 0x566A3E7: g_realloc (in /usr/lib/libglib-2.0.so.0.4600.2)
    ==3365==    by 0x5685846: ??? (in /usr/lib/libglib-2.0.so.0.4600.2)
    ==3365==    by 0x5685B66: g_string_insert_len (in /usr/lib/libglib-2.0.so.0.4600.2)
    ==3365==    by 0x5650E77: ??? (in /usr/lib/libglib-2.0.so.0.4600.2)
    ==3365==    by 0x5652214: g_build_filename (in /usr/lib/libglib-2.0.so.0.4600.2)
    ==3365==    by 0x4E40AA0: _geocode_glib_cache_path_for_query (geocode-glib.c:92)
    ==3365==    by 0x4E4052F: geocode_reverse_resolve_async (geocode-reverse.c:454)
    ==3365==    by 0x400D55: main (in /home/aleksander/Development/clients/collabora/geocode-test)

https://bugzilla.gnome.org/show_bug.cgi?id=762435